codepkg/objects/Project_Service_Location_Junction__c.object
<CustomObject>
    <description>Junction between Project and Service Location Object.</description>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Project Service Location Junctions</relationshipLabel>
        <relationshipName>Project_Service_Location_Junctions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Service_Location__c</fullName>
        <label>Service Location</label>
        <referenceTo>ServiceLocation__c</referenceTo>
        <relationshipLabel>Project Service Location Junctions</relationshipLabel>
        <relationshipName>Project_Service_Location_Junctions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Project Service Location Junction</label>
    <nameField>
        <displayFormat>PSL-{000000}</displayFormat>
        <label>Project Service Location Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Service Location Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>